@@ -894,4 +894,10 @@
     <email>mike@mterry.name</email>
     <bugzilla-account>mike@mterry.name</bugzilla-account>
   </person>
+  <!-- fur translation coordinator -->
+  <person id="mfurlani">
+    <name>Massimo Furlani</name>
+    <email>massimo.furlani@libero.it</email>
+    <bugzilla-account>massimo.furlani@libero.it</bugzilla-account>
+  </person>
 </people>
