@@ -187,6 +187,10 @@
     <mailing-list>gnomefr@traduc.org</mailing-list>
     <mailing-list-subscribe>http://www.traduc.org/mailman/listinfo/gnomefr</mailing-list-subscribe>
   </team>
+  <team id="fur">
+    <_language id="fur">Friulian</_language>
+    <coordinator id="mfurlani"/>
+  </team>
   <team id="gl">
     <_language id="gl">Galician</_language>
     <coordinator id="icq"/>
