@@ -1,3 +1,8 @@
+2007-12-11  Johannes Schmid <jhs@gnome.org>
+
+	* people.xml.in: Added Massimo Furlani
+	* tranlation-teams-xml.in: Added Friulian translation team
+
 2007-12-06  Claude Paroz  <claude@2xlibre.net>
 
 	* gnome-modules.xml.in:
